--- a/index.html
+++ b/index.html
@@ -23,24 +23,26 @@
   <div class="container">
 
     <header>
-      <div class="logo-div">
-        <img src="/images/logo.svg" alt="" aria-hidden="true" class="logo first-logo">
+      <div class="top">
+        <img src="/images/logo.svg" alt="" aria-hidden="true" class="first-logo">
         <a href="#" class="btn btn-try-free">Try It Free</a>
       </div>
-      <div class="introduction">
-        <div class="intro-text">
+
+      <div class="about">
+        <div class="about-text">
           <h1>Build The Community Your Fans Will Love</h1>
+
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
             Create connections with your users as you engage in genuine discussion.</p>
+
           <a href="#" class="btn btn-started-free">Get Started For Free</a>
         </div>
-        <img src="/images/illustration-mockups.svg" alt="" aria-hidden="true" class="mockup">
+        <img src="/images/illustration-mockups.svg" alt="" aria-hidden="true" class="mockup-img">
       </div>
     </header>
 
     <main>
-
-      <div class="card card-grow-together">
+      <div class="card card-grow">
         <div class="card-text">
           <h2>Grow Together</h2>
           <p>Generate meaningful discussions with your audience and build a strong, loyal community.
@@ -48,7 +50,7 @@
         </div>
         <img src="/images/illustration-grow-together.svg" alt="" aria-hidden="true" class="card-img">
       </div>
-      <div class="card card-flowing-conversation">
+      <div class="card card-flow">
         <div class="card-text">
           <h2>Flowing Conversations</h2>
           <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
@@ -56,7 +58,7 @@
         </div>
         <img src="/images/illustration-flowing-conversation.svg" alt="" aria-hidden="true" class="card-img">
       </div>
-      <div class="card card-your-users">
+      <div class="card card-user">
         <div class="card-text">
           <h2>Your Users</h2>
           <p>It takes no time at all to integrate Huddle with your app's authentication solution.
@@ -64,32 +66,30 @@
         </div>
         <img src="/images/illustration-your-users.svg" alt="" aria-hidden="true" class="card-img">
       </div>
-      <div class="card card-ready">
-        <h2>Ready To Build Your Community?</h2>
+      <div class="card card-small">
+        <h1>Ready To Build Your Community?</h1>
         <a href="#" class="btn btn-started-free">Get Started For Free</a>
       </div>
-
     </main>
 
     <footer>
-
-      <div class="last-logo-container">
-        <img src="/images/logo.svg" alt="" aria-hidden="true" class="logo last-logo">
+      <div>
+        <img src="/images/logo.svg" alt="" aria-hidden="true" class="last-logo">
       </div>
-
       <div class="info">
+
         <ul class="ul-1">
           <li>
-            <img src="/images/icon-location.svg" alt="" aria-hidden="true" class="location">
+            <img src="/images/icon-location.svg" alt="" aria-hidden="true">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua
           </li>
           <li>
-            <img src="/images/icon-phone.svg" alt="" aria-hidden="true" class="phone">
+            <img src="/images/icon-phone.svg" alt="" aria-hidden="true">
             +1-543-123-4567
           </li>
           <li>
-            <img src="/images/icon-email.svg" alt="" aria-hidden="true" class="mail">
+            <img src="/images/icon-email.svg" alt="" aria-hidden="true">
             example@huddle.com
           </li>
         </ul>
@@ -100,23 +100,19 @@
           <li>FAQ</li>
         </ul>
 
-
         <ul class="ul-3">
           <li>Career</li>
           <li>Blog</li>
           <li>Contact Us</li>
         </ul>
 
-
-        <ul class="twitter-fb-logo">
+        <ul class="fb-twitter-insta">
           <li><i class="fa fa-facebook"></i></li>
           <li><i class="fa fa-twitter"></i></li>
           <li><i class="fa fa-instagram"></i></li>
         </ul>
 
-
       </div>
-
       <div class="copyright">
         &copy; Copyright 2018 Huddle. All rights reserved.
       </div>
